--- a/bnp_mods1.rmd
+++ b/bnp_mods1.rmd
@@ -39,11 +39,145 @@ see http://www.openbugs.net/Examples/Eye-tracking.html
 
 ## Using 'bayesm'
 
+```{r}
+library(bayesm)
+help(package="bayesm")
+
+?rDPGibbs
+?rivDP
+```
+
 ## Using 'DPpackage'
+
+Package orphaned on CRAN, but archived version can be installed from source. See documentation at https://rdrr.io/cran/DPpackage/
+
+```{r, eval=FALSE}
+# location of source file downloaded from https://cran.r-project.org/src/contrib/Archive/ElemStatLearn/
+dpsourcefile <- file.path("~","Downloads","DPpackage_1.1-7.4.tar.gz")
+
+# install from source file
+install.packages(pkgs=dpsourcefile, repos=NULL, type="source")
+```
+
+```{r}
+library(DPpackage)
+help(package="DPpackage")
+
+?DPglmm
+?DPlmm
+?DPMlmm
+?DPcdensity
+?DPMolmm
+?DPolmm
+```
+
+```{r PTlm_ex}
+####################################
+# A simulated Data Set
+# (Mixture of Normals)
+####################################
+
+ind<-rbinom(100,1,0.5)
+vsim<-ind*rnorm(100,1,0.15)+(1-ind)*rnorm(100,3,0.15)
+
+x1<-rep(c(0,1),50)
+x2<-rnorm(100,0,1)
+
+etasim<-x1+-1*x2
+y<-etasim+vsim
+
+# Initial state
+state <- NULL
+
+# MCMC parameters
+nburn<-5000
+nsave<-10000
+nskip<-20
+ndisplay<-100
+mcmc <- list(nburn=nburn,nsave=nsave,nskip=nskip,
+             ndisplay=ndisplay)
+
+# Prior information
+prior <- list(alpha=1, beta0=rep(0,3), Sbeta0=diag(1000,3),
+              tau1=0.01, tau2=0.01, M=6)
+
+# Fit the model
+fit1 <- PTlm(formula=y~x1+x2,prior=prior,mcmc=mcmc,state=state,
+             status=TRUE) 
+
+# Summary with HPD and Credibility intervals
+summary(fit1,hpd=TRUE)
+summary(fit1,hpd=FALSE)
+
+# Plot model parameters (to see the plots gradually set ask=TRUE)
+plot(fit1)
+plot(fit1,nfigr=2,nfigc=2)
+
+```
+
+
+```{r DPlmm_ex}
+# School Girls Data Example
+data(schoolgirls)
+attach(schoolgirls)
+
+# Prior information
+prior<-list(alpha=1,nu0=4.01,tau1=0.01,tau2=0.01,
+            tinv=diag(10,2),mub=rep(0,2),Sb=diag(1000,2))
+
+# Initial state
+state <- NULL
+
+# MCMC parameters
+nburn<-5000
+nsave<-10000
+nskip<-20
+ndisplay<-1000
+mcmc <- list(nburn=nburn,nsave=nsave,nskip=nskip,ndisplay=ndisplay)
+
+# Fit the model: First run
+fit1<-DPlmm(fixed=height~1,random=~age|child,prior=prior,
+            mcmc=mcmc, state=state, status=TRUE)
+fit1
+
+# Fit the model: Continuation
+state <- fit1$state     
+fit2 <- DPlmm(fixed=height~1,random=~age|child,prior=prior,mcmc=mcmc,
+            state=state,status=FALSE)
+fit2
+
+# Summary with HPD and Credibility intervals
+summary(fit2)
+summary(fit2,hpd=FALSE)
+
+
+# Plot model parameters 
+# (to see the plots gradually set ask=TRUE)
+plot(fit2,ask=FALSE)
+plot(fit2,ask=FALSE,nfigr=2,nfigc=2)	
+
+# Plot an specific model parameter 
+# (to see the plots gradually set ask=TRUE)
+plot(fit2,ask=FALSE,nfigr=1,nfigc=2,param="sigma-(Intercept)")	
+plot(fit2,ask=FALSE,nfigr=1,nfigc=2,param="ncluster")	
+```
+
 
 ## Using 'BNSP'
 
+```{r}
+library(BNSP)
+help(package="BNSP")
+
+```
+
 ## Using 'dirichletprocess'
+
+```{r}
+library(dirichletprocess)
+help(package="dirichletprocess")
+
+```
 
 ## Using Stan??
 
